--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,8 @@ services:
         CACHE_TYPE: redis
         REDIS_URL: 'redis://redis:6379/'
         PUPPETEER_WS_ENDPOINT: 'ws://browserless:3000'  # marked
-        ACCESS_KEY: jingb
+        ACCESS_KEY: ${RSSHUB_AK}
+        GITHUB_ACCESS_TOKEN: ${GITHUB_ACCESS_TOKEN}
     depends_on:
         - service.redis
         - service.browserless  # marked
